Stop hiding overflow

--- a/src/components/Editor/components/Creator/index.css
+++ b/src/components/Editor/components/Creator/index.css
@@ -2,7 +2,6 @@
     position: relative;
     height: 100%;
     width: 100%;
-    overflow: hidden;
     background-color: white;
 }
 
